# DebridNZBd

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Home.md  README.md  docker-compose.yml  docker-entrypoint.sh  instructions.txt  pyproject.toml
debridnzbd/: __init__.py  __main__.py  app.py
debridnzbd/api/: __init__.py  auth.py  config.py  history.py  queue.py  router.py  status.py
debridnzbd/core/: __init__.py  cdn_downloader.py  config_store.py  state_sync.py
debridnzbd/db/: __init__.py  database.py  models.py
debridnzbd/torbox/: __init__.py  client.py  exceptions.py
debridnzbd/utils/: __init__.py  diskspace.py  nzo_id.py  version.py
debridnzbd/web/: __init__.py  auth.py  routes.py
debridnzd/: __main__.py  app.py
debridnzd/api/: auth.py  config.py  history.py  queue.py  router.py  status.py
debridnzd/core/: config_store.py  state_sync.py
debridnzd/db/: database.py
debridnzd/migrations/: __init__.py
debridnzd/torbox/: __init__.py  client.py  models.py
debridnzd/utils/: format.py
debridnzd/web/: routes.py
docs/: architecture.md  dead-code.md  download-workflow.md  security-audit.md  torbox-client.md
mockup/: history.html  index.html  status.html
mockup/config/: categories.html  folders.html  general.html  notifications.html  rss.html  scheduling.html  sorting.html  special.html  switches.html  torbox.html
mockup/static/css/: style.css
tests/: conftest.py  test_addfile.py  test_auth.py  test_cli.py  test_config_store.py  test_database.py  test_duplicate_detection.py  test_qbittorrent.py  test_torbox_client.py  test_web_auth.py
(+35 files in other folders)
