[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debridnzd"
version = "1.0.0"
description = "SABnzbd-compatible API server that routes downloads through Torbox debrid service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "DebridNZBd Contributors" }]
keywords = ["sabnzbd", "torbox", "debrid", "nzb", "usenet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "aiofiles>=23.2",
    "jinja2>=3.1",
    "pydantic>=2.6",
    "apscheduler>=3.10",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
notifications = ["apprise>=1.7"]
sorting = ["guessit>=3.8"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "httpx",
]

[project.scripts]
debridnzd = "debridnzd.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]